--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "postcss": "^8.4.23"
   },
   "dependencies": {
-    "axios": "^1.4.0",
+    "react": "^18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-router-dom": "^6.11.2"
   }
 }
