--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "postcss": "^8.4.23"
   },
   "dependencies": {
+    "framer-motion": "^10.13.0",
     "react": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-router-dom": "^6.11.2"
