--- a/convertPopup/package.json
+++ b/convertPopup/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.31",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "dompurify": "^3.0.5",
     "framer-motion": "^10.12.12",
     "parcel": "^2.8.3",
     "react": "^18.2.0",
