--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "proxy": "http://127.0.0.1:8000",
   "devDependencies": {
+    "@types/dompurify": "^3.0.2",
     "parcel": "^2.8.3",
     "postcss": "^8.4.23"
   },
   "dependencies": {
+    "dompurify": "^3.0.5",
     "framer-motion": "^10.13.0",
     "react": "^18.2.0",
     "react-hook-form": "^7.45.1",
