--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "postcss": "^8.4.23"
   },
   "dependencies": {
+    "@fontsource/open-sans": "^5.0.8",
+    "@fontsource/raleway": "^5.0.8",
     "dompurify": "^3.0.5",
     "framer-motion": "^10.13.0",
     "react": "^18.2.0",
