--- a/convertPopup/package.json
+++ b/convertPopup/package.json
@@ -2,7 +2,7 @@
   "name": "convertPopup",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://www.convertpopup.com/",
+  "proxy": "http://127.0.0.1:8000/",
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
