--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://react-django-backend-production.up.railway.app",
-  "proxy": "https://react-django-backend-production.up.railway.app",
+  "proxy": "http://127.0.0.1:8000",
   "devDependencies": {
     "@types/dompurify": "^3.0.2",
     "parcel": "^2.8.3",
