--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^10.13.0",
     "react": "^18.2.0",
     "react-hook-form": "^7.45.1",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "swr": "^2.2.4"
   }
 }
