--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "devDependencies": {
     "@types/dompurify": "^3.0.2",
     "parcel": "^2.8.3",
-    "postcss": "^8.4.23"
+    "postcss": "^8.4.23",
+    "prettier": "^3.0.0-alpha.6"
   },
   "dependencies": {
     "@fontsource/open-sans": "^5.0.8",
